# ldaa

./: .gitignore  LICENSE.md  README.md  langgraph.json  pyproject.toml  requirements.txt
ldaa/: schemas.py
ldaa/agents/: aggregate_results.py  analyze_segment.py  compare_documents.py  config.py  config.yaml  decide_segmentation.py  final_audit_export.py  graph.py  human_in_the_loop.py  ingest_documents.py  llm.py  self_reflect_comparison.py  self_reflect_segment.py  vector_store.py
ldaa/utils/: __init__.py  json.py  logging.py  prompt_variants.py  session.py
output/: report.md  verbose_comparison.md
results/: OUTPUT.md  REVIEW.md  TECHNICAL.md
results/output_bak/: report.json
scripts/: app.py  cli.py  play.ipynb
tests/: conftest.py  test_aggregate_results.py  test_analyze_segment.py  test_compare_documents.py  test_decide_segmentation.py  test_final_audit_export.py  test_ingest_documents.py  test_self_reflect_comparison.py  test_self_reflect_segment.py  test_vector_store.py
